manifests/level-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: just-enough-deployment
  labels:
    app: just-enough
spec:
  replicas: 3
  selector:
    matchLabels:
      app: just-enough-web
  template:
    metadata:
      labels:
        app: just-enough-web
    spec:
      containers:
      # Hey this matches our level 1 pod!
      - name: just-enough-container
        image: burningpony/just-enough-kubernetes:release-0.0.1
        command:
          - rackup
        # args:
        #   - "-p 9292"
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 9292
