manifests/level-3/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: just-enough-service
spec:
  selector:
    app: just-enough-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
